# DSGDpp

./: CMakeLists.txt  Doxyfile  INSTALL  NOTICE.txt  README.md  log4j.properties  notes.txt
examples/: CMakeLists.txt
examples/chteflio/: .directory  CMakeLists.txt  calculateCSGDblocking.cc  createBiasedFactors.cc  psgdNZL2BiasedNoLock.cc  scaleFactors.cc
examples/mf/: CMakeLists.txt  als.cc  asgd.cc  dals.cc  dgnmf.cc  distributed_matrix.cc  dlee01-gkl.cc  dsgd-gkl.cc  dsgd-gnmf.cc  dsgd.cc  dsgdpp.cc  gnmf.cc  io.cc  lapack-wrapper.cc  lee01-gkl.cc  project.cc  psgd.cc  sgd-gkl.cc  sgd-gnmf.cc  sgd.cc  test.cc
examples/mpi2/: CMakeLists.txt  env.cc  event.R  event.cc  event.tab  marshal.cc  mpi2test.cc  pairwise.cc  pi_task.cc  spawn.cc  udt.cc
mf/: CMakeLists.txt  factorization.h  id.h  init.h  init_impl.cc  logger.h  logger_impl.cc  mf.h  trace.h  types.h
mf/ap/: als.h  als_impl.cc  aptask.h  apupdate.h  dals.h  dals_impl.cc  dap-factorization.h  dgnmf.h  dgnmf_impl.cc  dlee01-gkl.h  dlee01-gkl_impl.cc  gnmf.h  gnmf_impl.cc  lee01-gkl.h  lee01-gkl_impl.cc
mf/lapack/: lapack_wrapper.h  lapack_wrapper_impl.cc
mf/loss/: biased-nzl2.h  biased-nzsl.h  gkl-data.h  gkl-model.h  gkl.h  kl.h  l1.h  l2.h  loss.h  nzl2.h  nzrmse.h  nzsl.h  sl-data.h  sl-model.h  sl.h
mf/matlab/: test.m
mf/matrix/: coordinate.h  distribute.h  distribute_impl.cc  distribute_impl.h  distributed_matrix.h  distributed_matrix_impl.cc  distributed_matrix_impl.h
mf/matrix/io/: descriptor.h  descriptor_impl.cc  descriptor_impl.h  format.h  generateDistributedMatrix.h  generateDistributedMatrix_impl.h  ioProjected.h  ioProjected_impl.cc  load.h  loadDistributedMatrix.h  loadDistributedMatrix_impl.h  load_impl.h  mappingDescriptor.h  mappingDescriptor_impl.cc  randomMatrixDescriptor.h  randomMatrixDescriptor_impl.cc  read.h  read_impl.h  store.h  store_impl.h  write.h  write_impl.h
mf/matrix/op/: .directory  balance.h  balance_impl.cc  copy.h  crossprod.h  generate.h  nnz.h  project.h  project_impl.cc  project_impl.h  scale.h  shuffle.h  sum.h  sumofprod.h  sums.h  unblock.h
mf/register/: register-generate.R  register-generated-1.h  register-generated-10.h  register-generated-11.h  register-generated-12.h  register-generated-13.h  register-generated-14.h  register-generated-14_impl.cc  register-generated-15.h  register-generated-15_impl.cc  register-generated-16.h  register-generated-16_impl.cc  register-generated-17.h  register-generated-17_impl.cc  register-generated-18.h  register-generated-18_impl.cc  register-generated-19.h  register-generated-19_impl.cc  register-generated-2.h  register-generated-20.h  register-generated-20_impl.cc  register-generated-21.h  register-generated-21_impl.cc  register-generated-22.h  register-generated-22_impl.cc  register-generated-23.h  register-generated-23_impl.cc  register-generated-24.h  register-generated-24_impl.cc  register-generated-25.h  register-generated-25_impl.cc  register-generated-26.h  register-generated-26_impl.cc  register-generated-3.h  register-generated-4.h  register-generated-5.h  register-generated-6.h  register-generated-7.h  register-generated-8.h  register-generated-9.h  (+4 more)
mf/sgd/: asgd-factorization.h  asgd.h  asgd_impl.h  dsgd-factorization.h  dsgd.h  dsgd_impl.h  dsgdpp-factorization.h  dsgdpp.h  dsgdpp_impl.h  mystratifiedpsgd.h  mystratifiedpsgd_impl.h  psgd.h  psgd_impl.h  sgd.h  sgd_impl.h
mf/sgd/decay/: decay.h  decay_auto.h  decay_bolddriver.h  decay_constant.h  decay_sequential.h
mf/sgd/functions/: functions.h  regularize-abs.h  regularize-gkl.h  regularize-l1.h  regularize-l2.h  regularize-maxnorm.h  regularize-none.h  regularize-nzl2.h  regularize-sl.h  regularize-truncate.h  update-abs.h  update-biased-nzsl-nzl2.h  update-gkl.h  update-lock.h  update-maxnorm.h  update-none.h  update-nzsl-l1.h  update-nzsl-l2.h  update-nzsl-nzl2.h  update-nzsl.h  update-sl.h  update-truncate.h
mpi2/: CMakeLists.txt  TODO.txt  channel.h  channel_impl.h  env.h  env_fwd.h  env_impl.cc  env_impl.h  init.h  init_impl.cc  logger.h  logger_impl.cc  marshal.h  mpi2.h  registry.h  registry_impl.cc  seeding.h  task-manager.h  task-manager_impl.cc  task.h  types.h  uninitialized.h  util.h
tools/: CMakeLists.txt  averageOutMatrix.cc  generateSyntheticData.cc  mfapply.py  mfasgd.cc  mfconvert.cc  mfcreateInitialFactors.cc  mfcreateRandomMatrixFile.cc  mfdap.cc  mfdblock.cc  mfdsgd.cc  mfdsgdpp.cc  mfgenerate.cc  mfplot.R  mfprepare.cc  mfproject.cc  mfsample.cc  mfsgd.cc  mpi2-parse-events.sh  mpi2-plot-events.sh  mpi2.R  parse.h  psgdL2Lock.cc  psgdL2NoLock.cc  psgdNZL2Lock.cc  psgdNZL2NoLock.cc  stratified-psgd.cc
tools/detail/: mfdsgd-args.h  mfdsgd-generate.R  mfdsgd-generated.h  mfdsgd-generated_impl.cc  mfdsgd-generated_impl1.cc  mfdsgd-generated_impl2.cc  mfdsgd-generated_impl3.cc  mfdsgd-generated_impl4.cc  mfdsgd-generated_impl5.cc  mfdsgd-generated_impl6.cc  mfdsgd-generated_impl7.cc  mfdsgd-generated_impl8.cc  mfdsgd-run.h
tools/experiments/: README  example.sh  exp4x7_60.sh  include.sh  log4j.properties
