link_libraries(${Boost_LIBRARIES} ${RG_LIBRARIES} mpi2 mf log4cxx boost_filesystem boost_system)
file(COPY "${MF_SOURCE_DIR}/log4j.properties" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/")

add_executable(distributed_matrix distributed_matrix.cc)
add_executable(dsgd dsgd.cc)
add_executable(dsgdpp dsgdpp.cc)
add_executable(asgd asgd.cc)
add_executable(dsgd-gkl dsgd-gkl.cc)
add_executable(dsgd-gnmf dsgd-gnmf.cc)
add_executable(sgd-gkl sgd-gkl.cc)
add_executable(sgd-gnmf sgd-gnmf.cc)
add_executable(lee01-gkl lee01-gkl.cc)
add_executable(dlee01-gkl dlee01-gkl.cc)
add_executable(io io.cc)
add_executable(project project.cc)
add_executable(sgd sgd.cc)
# add_executable(test test.cc)
add_executable(lapack-wrapper lapack-wrapper.cc)
add_executable(als als.cc)
add_executable(dals dals.cc)
add_executable(gnmf gnmf.cc)
add_executable(dgnmf dgnmf.cc)
add_executable(psgd psgd.cc)


